--- a/life_exp.qmd
+++ b/life_exp.qmd
@@ -14,3 +14,14 @@ iaoiens
 library(gapminder)
 ```
 
+```{r}
+library(tidyverse)
+gapminder::gapminder_unfiltered  |> 
+  group_by(year) |>
+  filter(lifeExp == max(lifeExp)) |>
+  ungroup() |>
+  select(year, country, lifeExp) |>
+  arrange(year) ->
+  sumdat
+```
+
